--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=6valley1679653798
                     APP_ENV=live
                     APP_KEY=base64:0AbX89bs1RprTUGJ1s+GffKkyr6TJLmP8VEq97EcjAw=
-                    APP_DEBUG=false
+                    APP_DEBUG=true
                     APP_INSTALL=true
                     APP_LOG_LEVEL=debug
                     APP_MODE=live
@@ -10,9 +10,9 @@ APP_NAME=6valley1679653798
                     DB_CONNECTION=mysql
                     DB_HOST=localhost
                     DB_PORT=3306
-                    DB_DATABASE=xbeton_6valley
-                    DB_USERNAME=xbeton_6valley
-                    DB_PASSWORD=mRepD;=S(x2k
+                    DB_DATABASE=6valley
+                    DB_USERNAME=root
+                    DB_PASSWORD=
 
                     BROADCAST_DRIVER=log
                     CACHE_DRIVER=file
@@ -40,4 +40,3 @@ APP_NAME=6valley1679653798
                     SOFTWARE_ID=MzE0NDg1OTc=
 
                     SOFTWARE_VERSION=13.1
-                    
